feat: 난이도 색상 지도 API 구현